<resources>
    <string name="app_name" translatable="false">AutoManual Sync</string>
    <string name="shared_preferences_name" translatable="false">com.example.android.gianlu33.automanualsync.SHARED_PREFERENCES</string>

    <!-- layout -->
    <string name="text_view_status_static">Status:</string>
    <string name="text_view_status_enabled">ENABLED</string>
    <string name="text_view_status_disabled">DISABLED</string>
    <string name="text_view_frequency_static">Sync every</string>
    <string name="text_view_time_sleep_static">Sync on for</string>
    <string name="text_view_notifications_static">Enable notifications</string>
    <string name="button_text_enable">Enable</string>
    <string name="button_text_disable">Disable</string>
    <string name="text_view_note">Note:\nAutoManual Sync would work only if sync is off.\nOtherwise the service would do nothing.</string>

    <!-- time -->
    <string name="fifteen_seconds">15 seconds</string>
    <string name="thirty_seconds">30 seconds</string>
    <string name="one_minute">1 minute</string>
    <string name="two_minutes">2 minutes</string>
    <string name="five_minutes">5 minutes</string>
    <string name="ten_minutes">10 minutes</string>
    <string name="fifteen_minutes">15 minutes</string>
    <string name="thirty_minutes">30 minutes</string>
    <string name="fourtyfive_minutes">45 minutes</string>
    <string name="sixty_minutes">60 minutes</string>
    <string name="ninety_minutes">90 minutes</string>
    <string name="two_hours">2 hours</string>
    <string name="three_hours">3 hours</string>
    <string name="four_hours">4 hours</string>
    <string name="five_hours">5 hours</string>
    <string name="six_hours">6 hours</string>
    <string name="twelve_hours">12 hours</string>
    <string name="twentyfour_hours">24 hours</string>
    <string name="fourtyeight_hours">48 hours</string>

    <!-- job -->
    <string name="job_id" translatable="false">__AUTOMANUAL_SYNC_JOB_ID__</string>

    <!-- sharedpreferences -->
    <string name="shared_preferences_status" translatable="false">__SHARED_PREFERENCES_STATUS__</string>
    <string name="shared_preferences_frequency_time_index" translatable="false">__SHARED_PREFERENCES_FREQUENCY_TIME_INDEX__</string>
    <string name="shared_preferences_time_sleep_time_index" translatable="false">__SHARED_PREFERENCES_TIME_SLEEP_TIME_INDEX__</string>
    <string name="shared_preferences_enable_notifications" translatable="false">__SHARED_PREFERENCES_ENABLE_NOTIFICATIONS__</string>

    <!-- Notifications -->
    <string name="default_notification_channel_name" translatable="false">General</string>
    <string name="default_notification_channel_id" translatable="false">__DEFAULT_NOTIFICATION_CHANNEL_ID__</string>
    <string name="notification_text_title_enabled">AutoSync enabled</string>
    <string name="notification_text_title_disabled">AutoSync disabled</string>
</resources>
